--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,13 @@
     </properties>
 
     <dependencies>
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
         <!-- dependencies are always listed in sorted order by groupId, artifectId -->
         <!-- intra-project -->
 
