--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,14 @@
         <!-- dependencies are always listed in sorted order by groupId, artifectId -->
         <!-- intra-project -->
 
+        <!-- https://mvnrepository.com/artifact/org.apache.hive/hive-cli -->
+        <dependency>
+            <groupId>org.apache.hive</groupId>
+            <artifactId>hive-cli</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+
         <dependency>
             <groupId>org.spark-project.spark</groupId>
             <artifactId>unused</artifactId>
