--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>wuxian.me</groupId>
-    <artifactId>Datetime-SparkSql</artifactId>
+    <artifactId>HiveUdf</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
